# Ai-Automation-saas

./: .env.example  .gitignore  CLAUDE.md  PR3-customer-identity.md  PR4-channel-agnostic-storage.md  PR5-channel-abstraction.md  PR6-voice-channel.md  PR7-livekit-runtime.md  PR9C-sse-streaming-brain-ack.md  README.md  ZYON_V2_SPEC.md  package-lock.json  package.json  server.js
.claude/agents/: ai-engineer.md  backend-engineer.md  code-reviewer.md  debugger.md  platform-architect.md
core/: actions.js  coreActions.js  eventTypes.js  events.js
design-reference/: zyon-design-system.html  zyon-hero.html  zyon-legal-acceptable-use.html  zyon-legal-data-deletion.html  zyon-legal-privacy.html  zyon-legal-terms.html  zyon-og-image.html  zyon-section-cta.html  zyon-section-faq.html  zyon-section-footer.html  zyon-section-platform.html  zyon-section-pricing.html  zyon-section-security.html  zyon-section-solutions.html  zyon-section-trust.html  zyon-section-why.html  zyon-sections-problem-howitworks.html  zyon-seo-reference.md
docs/: meta-template-setup.md  per-tenant-read-inventory.md  zyon-first-launch-plan (2).md
docs/architecture/: ARCHITECTURE.md
docs/audit/: 2026-07-production-readiness.md  notes-scratch.md
docs/deploy/: prod-readiness.md
docs/reviews/: voice-review-2026-07.md
docs/runbooks/: backup-restore.md
docs/specs/: portal-v1-spec.md
provision/: sunrise-dental.json
public/admin/: app.js  appointments.html  collections.html  conversations.html  conversations.js  leads.html  login.html  notifications.html  style.css  tenant-detail.html  tenant-detail.js  tenant-new.html  tenants.html  workflow.html
public/demo/: app.js  dashboard.css  dashboard.html  dashboard.js  dashboard.json  fixture.json  inbox.css  inbox.html  inbox.js  inbox.json  index.html  shared.css  styles.css
public/portal/: booking-rules.css  booking-rules.html  booking-rules.js  booking-summary.js  clinic-profile.css  clinic-profile.html  clinic-profile.js  doctors.css  doctors.html  doctors.js  faqs.css  faqs.html  faqs.js  history.css  history.html  history.js  home.css  home.js  hours.css  hours.html  hours.js  index.html  knows.css  knows.html  knows.js  login.html  pricing.css  pricing.html  pricing.js  receptionist.css  receptionist.html  receptionist.js  safety.css  safety.html  safety.js  shell.js  test.css  test.html  test.js  tokens.css  (+3 more)
samples/: clinic-knowledge.md
scripts/: backfill-tenant-configs.js  encrypt-token.js  ingest-knowledge.js  provision-tenant.js  seed-schedules.js  seed_voice_test_customer.js  seed_voice_test_customer.sql  tenant-lifecycle.js  test-chat.js  update-prompt.js  validate-tenant.js
scripts/db/: backup.sh  restore.sh
scripts/demo/: capture_result.json  capture_stt.py  capture_turn.js  fetch_fonts.js  stt_capture_raw.json
scripts/portal/: acceptance.js  shoot.js  shootWizard.js
spike/voice-retell/: README.md  server.js  trigger.js
src/admin/: adminRoutes.js  security.js
voice-agent/: .env.example  .gitignore  README.md  agent.py  brain_client.py  conftest.py  latency.py  pyproject.toml  sarvam_protocol.py  stt_sarvam.py  tts_sarvam.py  turn_context.py
voice-agent/tests/: test_agent_shim.py  test_agent_stream.py  test_brain_client.py  test_latency.py  test_sarvam_protocol.py  test_turn_context.py
web/: .gitignore  README.md  package-lock.json  package.json
(+219 files in other folders)
