[project]
name = "voice-agent"
version = "0.1.0"
description = "Real-time voice audio loop (LiveKit Agents) that delegates every turn to the Node brain. Transport only — no business logic."
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=0.10",   # real-time audio loop: VAD, turn-taking, barge-in
    "livekit-plugins-silero",  # VAD
    "httpx>=0.27",            # POST /internal/voice/turn
]

# STT/TTS use Sarvam (Saaras / Bulbul) via the Sarvam HTTP API directly; if/when
# an official livekit Sarvam plugin exists, add it here. Telephony is reached via
# the Node TelephonyProvider seam, never from this worker.

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
